# lingua-node

./: .gitignore  README.md  package.json
.github/workflows/: linux.yml  macos.yml  publish.yml  windows.yml
native/: Cargo.toml  index.d.ts
native/src/: language_detector.rs  lib.rs  test.rs
patches/: node-pre-gyp+0.17.0.patch
src/: index.ts
