[package]
name = "lingua-node"
version = "0.4.1"
authors = ["Simon Liang <simon@x-tech.io>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[[bin]] # Bin to run the test
name = "test"
path = "src/test.rs"

[lib]
name = "lingua_node"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.9.1"

[dependencies]
neon = "0.9.1"
lingua = "1.3.2"
